@@ -9,6 +9,7 @@ Broker:
 - Fix bug #1324411, which could have had unexpected consequences for delayed
   messages in rare circumstances.
 - Add support for "session present" in CONNACK messages for MQTT v3.1.1.
+- Remove strict protocol #ifdefs.
 
 Clients:
 - Both clients can now load default configuration options from a file.
@@ -29,6 +30,7 @@ Client library:
 - Fix callback deadlocks after calling mosquitto_disconnect(), when using the
   threaded interfaces. Closes bug #1313725.
 - Fix SRV support when building with CMake.
+- Remove strict protocol #ifdefs.
 
 General:
 - Use $(STRIP) for stripping binaries when installing, to allow easier cross
